@@ -1501,12 +1501,17 @@ Async.prototype.next = function() {
 	var self = this;
 	
 	if (self.tasks === null || self.tasks.length === 0) {
-		
-		process.nextTick(function() {
+
+		var cb = function() {
 			var owner = self.owner || self;
 			self.onCompleted.call(owner, owner);
-		});
+		};
 
+		if (setImmediate)
+			setImmediate(cb);
+		else
+			process.nextTick(cb);
+		
 		return self;
 	}
 
@@ -1523,7 +1528,11 @@ Async.prototype.next = function() {
 	};
 
 	// node.js do events
-	process.nextTick(run);
+	if (setImmediate)
+		setImmediate(run);
+	else
+		process.nextTick(run);
+
 	return self;
 };
 
@@ -1539,11 +1548,16 @@ Async.prototype.skip = function(count) {
 
 	if (self.tasks === null || self.tasks.length === 0) {
 		
-		process.nextTick(function() {
+		var cb = function() {
 			var owner = self.owner || self;
 			self.onCompleted.call(owner, owner);
-		});
+		};
 
+		if (setImmediate)
+			setImmediate(cb);
+		else
+			process.nextTick(cb);
+		
 		return self;
 	}
 
