@@ -21,6 +21,7 @@ IN DEVELOPMENT ======= 1.2.1-4
 - updated: partial.js binary
 - updated: String.padLeft(), String.padRight() - default char is ' '
 - updated: utils.etag(filename, version)
+- updated: utils.async & controller.async (setImmediate)
 
 - renamed: utils.Etag and ETagVersion to: utils.etag() and config.etagVersion
 
